# lassa-fever-and-climate

./: .gitignore  Bauchi_model.pt  Edo_model.pt  Main_lassa_weekly_prediction_all.ipynb  Ondo_model.pt  README.md  pyproject.toml  visualizations_weekly_data_viz.ipynb  weeklydata.xlsx
data/raw/: Lassa fever confirmed cases 2024.xlsx  weeklydata.xlsx
docs/: Run notes.txt  presentation.docx  presentation.tex
models/: EpidemiologyModels.py
models/lstm/: shap_demo.ipynb  visualizations_weekly_data_viz.ipynb
models/lstm/LSTM_One_output_per_model/: Bauchi_model.pt  Edo_model.pt  Ondo_model.pt  One_output_lassa_weekly_prediction.ipynb
models/lstm/LSTM_One_output_per_model/.ipynb_checkpoints/: One_output_lassa_weekly_prediction-checkpoint.ipynb
models/lstm/LSTM_main_model/: Edo_model.pt  Main_lassa_weekly_prediction.ipynb  Main_lassa_weekly_prediction_all_output.ipynb  Not_used_Duplicate Main_lassa_weekly_prediction_all.ipynb  Ondo_model.pt  Poisson.ipynb
models/mar/MAR_model_Per_State_One_Output/: Bauchi_state_all_var_mar_model.pt  Bauchi_state_one_var_mar_model.pt  Edo_state_one_var_mar_model.pt  Ondo_state_one_var_mar_model.pt  One_Output_MAR_per_state_lassa_weekly_prediction_All_Data.ipynb  mar_all_states_model.pt
models/mar/MAR_model_per_state/: Edo_state_all_var_mar_model.pt  MAR_lassa_weekly_prediction_All_Data.ipynb  Ondo_state_all_var_mar_model.pt
models/mar/MAR_model_per_state/.ipynb_checkpoints/: MAR_lassa_weekly_prediction_All_Data-checkpoint.ipynb
results/plots/: Bauchi_model.pt
utils/: Utilities.py
(+16 files in other folders)
